# halo

./: .gitignore  README.md  pyproject.toml
baselines/: README.md  __init__.py  base.py
baselines/crosshar/: __init__.py  adapter.py  citation.json  prep.py  train.py
baselines/halo/: adapter.py
baselines/halo_evidence/: adapter.py
baselines/harnet/: __init__.py  adapter.py  citation.json
baselines/imagebind/: __init__.py  adapter.py  citation.json
baselines/limubert/: __init__.py  adapter.py  citation.json  prep.py  train.py
baselines/normwear/: __init__.py  adapter.py  citation.json
baselines/unimts/: __init__.py  adapter.py  citation.json
data/datasets/: README.md
data/labels/: global_labels.json  subject_splits.json
data/scripts/: README.md  accel_units.py  assemble.py  augmentations.py  baseline_view.py  build_global_label_mapping.py  build_grids.py  canonical_labels.py  channels.py  deployment_policy.py  download_datasets.py  label_augmentation.py  label_groups.py  plot_sessions.py  setup_all_datasets.py
docs/: AUGMENTATIONS.md  BASELINES.md  BASELINE_FAIRNESS_POLICY.md  DATA_HETEROGENEITY.md  DATA_PIPELINE.md  MOTIVATION.md  README.md  RESULTS_CANONICAL.md
docs/baselines/: BASELINES.md  BASELINE_FAIRNESS_POLICY.md  RESULTS_PRELIMINARY.md  RESULTS_V2.md
docs/data/: DATA_HETEROGENEITY.md  DATA_PIPELINE.md
docs/design/: AUGMENTATIONS.md  DATA_SCALING_PLAN.md  EVIDENCE_ENGINE.md  EVIDENCE_ENGINE_BUILD_PLAN.md  EVIDENCE_ENGINE_FINDINGS.md  EVIDENCE_ENGINE_RESEARCH.md  EVIDENCE_ENGINE_TIER2.md  LANGUAGE_HIERARCHY.md  LEARNABLE_TOKENIZER_ARM.md  MOTIVATION.md  NATIVE_PRETRAIN_PREFLIGHT.md  PIPELINE_A_PREFLIGHT.md  POSITIONING.md  REMEDIATION_PLAN.md  TEXT_CONDITIONING.md  TOKENIZER_ABLATION.md  TOKENIZER_QUALITY.md
eval/: __init__.py  assemble_table.py  data.py  protocol.py  run_baselines.py  scoring.py  splits.py  tokenizer_metrics.py
experiments/: README.md  __init__.py
experiments/tokenizer_contrastive/: README.md  __init__.py  checkpoint.py  config.py  data.py  evaluate.py  losses.py  metrics.py  model.py  train.py  views.py
halo/baselines/: baseline_view.py
halo/data/: accel_units.py
model/: README.md
model/evidence/: decoder.py  edl.py  head.py  multisubspace.py
model/tokenizer/: __init__.py  channel_text.py  encoder.py  (+6 more)
tests/: test_accel_units.py  test_assemble.py  test_baseline_view.py  test_build_global_label_mapping.py  test_build_grids.py  test_canonical_labels.py  test_contrastive_tokenizer.py  test_deployment_channel_policy.py  test_eda_grid_io.py  test_eda_orientation.py  test_encoder_m3.py  test_eval_scoring.py  test_evidence_decoder.py  test_evidence_edl.py  test_evidence_head.py  test_evidence_multisubspace.py  test_evidence_train_decoder.py  test_factored_augmentations.py  test_factored_conditioning.py  test_filterbank.py  test_losses_repr.py  test_mamba_frontend.py  test_persensor_mamba.py  test_pretrain_data.py  test_pretrain_mamba_integration.py  test_run_baselines.py  test_subject_splits.py  test_time_encoder.py  test_tokenizer_m1.py  test_tokenizer_metrics.py
training/: README.md
(+190 files in other folders)
