[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "halo"
version = "0.1.0"
description = "Language-aligned IMU foundation model for zero-shot phone/watch human activity recognition (v2 rebuild)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest"]
eda = ["matplotlib", "torch"]
experiments = ["torch"]
model = ["torch"]

[tool.setuptools.packages.find]
include = ["data*", "experiments*", "model*", "training*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
