[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "halo"
version = "0.1.0"
description = "Language-aligned IMU foundation model for zero-shot phone/watch human activity recognition (v2 rebuild)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest"]
eda = ["matplotlib", "torch"]
experiments = ["torch"]
# Full training/eval stack: encoder text prototypes (sentence-transformers) + probes (scikit-learn).
model = ["torch", "sentence-transformers", "scikit-learn"]
# Fused selective-scan kernel for the Arm B (mamba) tokenizer. Requires a CUDA toolchain to build
# (nvcc); on a fresh pod: `pip install causal-conv1d==1.6.2.post1 mamba-ssm==2.3.2.post1 --no-build-isolation`.
# Without these the mamba frontend falls back to the slow reference scan (pretrain.py fails loud on
# CUDA). Pinned to the exact .post1 builds verified in the 2026-07 tokenizer ablation.
mamba = ["causal-conv1d==1.6.2.post1", "mamba-ssm==2.3.2.post1"]

[tool.setuptools.packages.find]
include = ["data*", "experiments*", "model*", "training*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
